--- a/ECMA Script/JavaScript-Revision  (1-20)/index.html
+++ b/ECMA Script/JavaScript-Revision  (1-20)/index.html
@@ -6,7 +6,35 @@
     <title>Js Revisions</title>
 </head>
 <body>
-    <h1 onmouseover="alert('Welcome')"><button><a href="JavaScript:void(0)">Js revision (1-20)  </a></button></h1>
+    <!-- <h1 onmouseover="alert('Welcome')"><button><a href="JavaScript:void(0)">Js revision (1-20)  </a></button></h1> -->
+    <h1>Events</h1>
+    <!-- <form onsubmit="CheckEmail(emailID)">
+   <input type="text" id ="emailID">
+   <input type="submit" value="Order Now" >
+ </form> -->
+
+ <form onsubmit="checkCampus()">
+    rollNo:
+    <br>
+    <input type="rollNo" name="" id="rollNumber" placeholder="rollNo">
+    <br>
+    Campus:
+    <br>
+    <input type="text" name="campus" id="campus" placeholder="campus">
+    <br>
+    <input type="Submit" name="" id=""type="subm    it">
+ </form>
+
+ <p id="text">
+  JavaScript ek powerful language hai jo websites ko interactive banati hai.
+  <span id="dots">...</span>
+  <span id="more">
+    Iski madad se hum buttons, forms, animations aur dynamic content bana
+    sakte hain jo user experience ko behtar banata hai.
+  </span>
+</p>
+
+<button onclick="toggleText()" id="btn">Read More</button>
 
 
     <script src="./index.js"></script>
